syntax = "proto3";

package main;
option go_package = "pb";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

message HelloRequest {
    int64 id = 1 [(validate.rules).int64.gt = 0];
    string last_name = 2;
    string first_name = 3;
}

message HelloResponse {
    int64 id = 1;
    string last_name = 2;
    string first_name = 3;
}

service Example {
    rpc Hello(HelloRequest) returns (HelloResponse);
}